tests/snapshots/help_snapshots__noun_help@port.snap
---
source: tests/help_snapshots.rs
expression: out
---
Random port number generator (IANA ephemeral range default)

Usage: ubertool port [OPTIONS] <COMMAND>

Commands:
  random  Generate a random port number in a range
  help    Print this message or the help of the given subcommand(s)

Options:
      --json     Output as JSON to stdout. Human messages still go to stderr
  -q, --quiet    Bare values only (pipe-friendly)
  -v, --verbose  Verbose progress to stderr
  -h, --help     Print help
  -V, --version  Print version
