tests/snapshots/help_snapshots__noun_help@qr.snap
---
source: tests/help_snapshots.rs
expression: out
---
QR code generation (SVG/PNG) including WiFi URIs

Usage: ubertool qr [OPTIONS] <COMMAND>

Commands:
  generate  Generate a QR code from arbitrary text
  wifi      Generate a QR code encoding a Wi-Fi network URI
  help      Print this message or the help of the given subcommand(s)

Options:
      --json     Output as JSON to stdout. Human messages still go to stderr
  -q, --quiet    Bare values only (pipe-friendly)
  -v, --verbose  Verbose progress to stderr
  -h, --help     Print help
  -V, --version  Print version
