tests/snapshots/help_snapshots__noun_help@regex.snap
---
source: tests/help_snapshots.rs
expression: out
---
Regular expression utilities (test / generate)

Usage: ubertool regex [OPTIONS] <COMMAND>

Commands:
  test      Test whether a pattern matches text; emit groups
  generate  Generate a string matching a pattern
  memo      Print the bundled regex cheat sheet (Markdown)
  help      Print this message or the help of the given subcommand(s)

Options:
      --json     Output as JSON to stdout. Human messages still go to stderr
  -q, --quiet    Bare values only (pipe-friendly)
  -v, --verbose  Verbose progress to stderr
  -h, --help     Print help
  -V, --version  Print version
