tests/snapshots/help_snapshots__noun_help@rsa.snap
---
source: tests/help_snapshots.rs
expression: out
---
RSA keypair generation (PKCS#8 PEM, 2048/3072/4096 bits)

Usage: ubertool rsa [OPTIONS] <COMMAND>

Commands:
  keypair  Generate an RSA keypair (PKCS#8 PEM)
  help     Print this message or the help of the given subcommand(s)

Options:
      --json     Output as JSON to stdout. Human messages still go to stderr
  -q, --quiet    Bare values only (pipe-friendly)
  -v, --verbose  Verbose progress to stderr
  -h, --help     Print help
  -V, --version  Print version
