tests/snapshots/help_snapshots__noun_help@safelink.snap
---
source: tests/help_snapshots.rs
expression: out
---
Unwrap Outlook/Google/generic URL wrappers

Usage: ubertool safelink [OPTIONS] <COMMAND>

Commands:
  decode  Unwrap a wrapped URL (Outlook safelink, Google redirect, etc.)
  help    Print this message or the help of the given subcommand(s)

Options:
      --json     Output as JSON to stdout. Human messages still go to stderr
  -q, --quiet    Bare values only (pipe-friendly)
  -v, --verbose  Verbose progress to stderr
  -h, --help     Print help
  -V, --version  Print version
