tests/snapshots/help_snapshots__noun_help@self.snap
---
source: tests/help_snapshots.rs
expression: out
---
Show version / update the binary in place

Usage: ubertool self [OPTIONS] <COMMAND>

Commands:
  version  Show the running binary's version, optionally check for updates
  update   Update the binary in place from the latest GitHub release
  help     Print this message or the help of the given subcommand(s)

Options:
      --json     Output as JSON to stdout. Human messages still go to stderr
  -q, --quiet    Bare values only (pipe-friendly)
  -v, --verbose  Verbose progress to stderr
  -h, --help     Print help
  -V, --version  Print version
