tests/snapshots/help_snapshots__noun_help@slugify.snap
---
source: tests/help_snapshots.rs
expression: out
---
URL slug generation

Usage: ubertool slugify [OPTIONS] <COMMAND>

Commands:
  generate  Generate a URL-safe slug
  help      Print this message or the help of the given subcommand(s)

Options:
      --json     Output as JSON to stdout. Human messages still go to stderr
  -q, --quiet    Bare values only (pipe-friendly)
  -v, --verbose  Verbose progress to stderr
  -h, --help     Print help
  -V, --version  Print version
