tests/snapshots/help_snapshots__noun_help@svg-placeholder.snap
---
source: tests/help_snapshots.rs
expression: out
---
SVG placeholder image generator

Usage: ubertool svg-placeholder [OPTIONS] <COMMAND>

Commands:
  generate  Generate a placeholder SVG image
  help      Print this message or the help of the given subcommand(s)

Options:
      --json     Output as JSON to stdout. Human messages still go to stderr
  -q, --quiet    Bare values only (pipe-friendly)
  -v, --verbose  Verbose progress to stderr
  -h, --help     Print help
  -V, --version  Print version
