tests/snapshots/help_snapshots__noun_help@temperature.snap
---
source: tests/help_snapshots.rs
expression: out
---
Temperature unit conversion (celsius / fahrenheit / kelvin)

Usage: ubertool temperature [OPTIONS] <COMMAND>

Commands:
  convert  Convert between temperature units (celsius/fahrenheit/kelvin)
  help     Print this message or the help of the given subcommand(s)

Options:
      --json     Output as JSON to stdout. Human messages still go to stderr
  -q, --quiet    Bare values only (pipe-friendly)
  -v, --verbose  Verbose progress to stderr
  -h, --help     Print help
  -V, --version  Print version
